RESOLVED FIXED80161
BlackBerryPlatformScreen.h API has been updated. Reflect those changes in our usage.
https://bugs.webkit.org/show_bug.cgi?id=80161
Summary BlackBerryPlatformScreen.h API has been updated. Reflect those changes in ou...
Adam Treat
Reported 2012-03-02 07:36:55 PST
The platform screen api has been changed and we need to adapt to comply with the new API. This is a duplicate of PR 141157 in RIM's bug tool.
Attachments
Fix (11.93 KB, patch)
2012-03-02 07:43 PST, Adam Treat
tonikitoo: review+
tonikitoo: commit-queue-
Version that applies to trunk (10.73 KB, patch)
2012-03-02 08:51 PST, Adam Treat
webkit.review.bot: commit-queue-
Version with right spelling of 'Antonio' (10.73 KB, patch)
2012-03-02 10:20 PST, Adam Treat
no flags
Adam Treat
Comment 1 2012-03-02 07:43:45 PST
Antonio Gomes
Comment 2 2012-03-02 07:47:34 PST
Comment on attachment 129900 [details] Fix View in context: https://bugs.webkit.org/attachment.cgi?id=129900&action=review > Source/WebCore/ChangeLog:9 > + Reviewed by Jakob Petsovits. mark it as internally reviewed by Jakob.
Adam Treat
Comment 3 2012-03-02 08:51:20 PST
Created attachment 129905 [details] Version that applies to trunk I changed Jakob to an internal reviewer and made a patch that applies against trunk. The reason the other one didn't apply is it included a hunk against a file that has not been upstreamed yet.
WebKit Review Bot
Comment 4 2012-03-02 10:08:30 PST
Comment on attachment 129905 [details] Version that applies to trunk Rejecting attachment 129905 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Atonio Gomes found in /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/11803017
Adam Treat
Comment 5 2012-03-02 10:20:01 PST
Created attachment 129919 [details] Version with right spelling of 'Antonio'
WebKit Review Bot
Comment 6 2012-03-02 11:48:40 PST
Comment on attachment 129919 [details] Version with right spelling of 'Antonio' Clearing flags on attachment: 129919 Committed r109592: <http://trac.webkit.org/changeset/109592>
WebKit Review Bot
Comment 7 2012-03-02 11:48:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.