https://bugs.webkit.org/show_bug.cgi?id=80161 PR: 141157

BlackBerryPlatformScreen.h API has been updated.  Reflect those
changes in our usage.

Source/WebCore:

Patch by Adam Treat <atreat@rim.com> on 2012-03-02
Reviewed by Antonio Gomes.
Internally reviewed by Jakob Petsovits

* platform/blackberry/PlatformScreenBlackBerry.cpp:
(WebCore::screenAvailableRect):
(WebCore::screenRect):

Source/WebKit/blackberry:

Patch by Adam Treat <atreat@rim.com> on 2012-03-02
Reviewed by Antonio Gomes.
Internally reviewed by Jakob Petsovits.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::tileWidth):
(BlackBerry::WebKit::BackingStorePrivate::tileHeight):
* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::init):
(BlackBerry::WebKit::WebPagePrivate::transformedViewportSize):
(BlackBerry::WebKit::WebPagePrivate::fixedLayoutSize):
(BlackBerry::WebKit::WebPagePrivate::recomputeVirtualViewportFromViewportArguments):
(BlackBerry::WebKit::WebPagePrivate::setDefaultLayoutSize):
(BlackBerry::WebKit::WebPagePrivate::defaultMaxLayoutSize):
* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::restoreViewState):
* WebKitSupport/SurfacePool.cpp:
(BlackBerry::WebKit::createCompositingSurface):

Canonical link: https://commits.webkit.org/97267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109592 268f45cc-cd09-0410-ab3c-d52691b4dbfc